0.0.1.11
===========
! Check for null handle to avoid crash in IRC mod
! gdi leaks in option page (thx tioduke)

0.0.1.10
===========
* Use popup for warning instead of message box.
+ Check if popup plugin is present if not use messagebox.

0.0.1.9
===========
* Change options dialog (use tabsrmm uxtheme)

0.0.1.8
===========
+ Show a popup on sending nudge

0.0.1.7
===========
! Change text for status log on receive.
* Use flags = 0 for status notify.
! Wrong section name in options saving.
* Use winres.h in resource.

0.0.1.6
===========
+ Per contact limitation (no more per protocol cause too restrictive)
+ Privacy options to limit the number of nudge to receive
+ Options to show nudge as status change. (thx Tioduke)

0.0.1.5
===========
! Memory leaks fix. (Patch by Ghazan)

0.0.1.4
===========
! Bug fix, url for file in updater info points to source :-(.

0.0.1.3
===========
! Bug fix, check time for default proto too ;)

0.0.1.2
===========
+ Add the right url for updater, now that nudge is on FL.

0.0.1.1
===========
:( skipped

0.0.1.0
===========
* Some modifications of the option page.
* Redesign option page.
! Bug fix with slider in shake option.
! Bug fix with updater and stable version.

0.0.0.12
===========
+ Now possible to change the text shown when sending or receiving nudge ( [color=red]BUZZ!!![/color] for yahoo ;) )
* Change options page.
! Now apply button is enable when changing status.

0.0.0.11
===========
+ Status support (global or by protocol)
+ Limitation only sent 1 nudge every 30 sec per protocol.

0.0.0.10
===========
+ Multiprotocol options

0.0.0.9
===========
Patch by Tioduke
{
	* Use the right protoname for treating nudge as event
	* Take care of the message dialog (open or not) in treating nudge as event
	+ Registration in dbeditor ++
}
* Be aware of metacontact when sendig/receiving nudge (history).

0.0.0.8
===========
+ Shake options are now saved in DB
! some code rewrite in order to easily change the algo of shaking