@@ -2,6 +2,7 @@
 ===========
 ! Check for null handle to avoid crash in IRC mod
 ! gdi leaks in option page (thx tioduke)
++ Auto send nudge option when received one.
 
 0.0.1.10
 ===========
